Ingress Advanced Traffic Control/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-canary
  namespace: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
    - host: advanced.ingress.local
      http:
        paths:  
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: web-canary
                port:
                  number: 80
