Ingress Advanced Traffic Control/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - advanced.ingress.local
      secretName: ingress-demo-tls
  rules:
    - host: advanced.ingress.local
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80 
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
